--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -2,21 +2,25 @@
 
 <div class="row" style="margin-bottom:25px;">
   <div class="col-md-12">
-    <%= link_to "New Member", new_space_member_path(@space), class: "btn btn-primary pull-right" -%>
+    <%= link_to "Add New Member", new_space_member_path(@space), class: "btn btn-primary pull-right", style: "margin-top: 14px;" -%>
+    <h3 class="">Here's everyone at <%= @space.name-%></h3>
   </div>
 </div>
+
+<hr>
 
 <div class="row">
   <div id="members">
     <% @members.each do |member| %>
-      <div class="col-md-2 col-xs-6">
+      <div class="col-lg-15 col-md-3 col-xs-6">
         <div class="bs-component">
-          <div class="member-card">
-            <img class="member-pic" src="<%= member.gravatar_url(:size =>96, :rating => 'G', :secure => true, :default => 'identicon') -%>">
-            <span class="member-name"><%= member.name %></span>
-            <span class="member-email"><%= member.email %></span>
-            <a href="<%= space_member_path(@space, member)%>" class="btn btn-default btn-xs btn-view-member">View Member</a>
-          </div>
+          <a href="<%= space_member_path(@space, member)%>">
+            <div class="member-card">
+              <img class="member-pic" src="<%= member.gravatar_url(:size =>96, :rating => 'G', :secure => true, :default => 'identicon') -%>">
+              <span class="member-name"><%= member.name %></span>
+              <span class="member-email"><%= member.email %></span>
+            </div>
+          </a>
         </div>
       </div>
       
