--- a/app/views/shared/_settings.html.haml
+++ b/app/views/shared/_settings.html.haml
@@ -1,4 +1,4 @@
-%ul.nav.nav-pills.nav-stacked{}
+%ul.account-nav{}
   %li{:class => active_tab("spaces")}
     = link_to "Space", edit_space_path(@space)
   %li{:class => active_tab("locations")}
@@ -11,3 +11,6 @@
     = link_to "Managers", space_admins_path(@space)
   %li{:class => active_tab(["integrations", "stripes"])}
     = link_to "Integrations", space_integrations_path(@space)
+
+
+
