--- a/app/views/insights/index.html.haml
+++ b/app/views/insights/index.html.haml
@@ -1,1 +1,7 @@
-%h1 Under construction
+.col-md-12.text-center
+  .section-coming-soon
+    %img{:src => "/img/coming-soon.png", :width => "360px"}
+    %h2
+      Coming Soon
+    %span{:class => "explination"}
+      We're still busy building space analytics and insights. You will be the first to know as soon as they are available.
