--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
             %div{ :class => flash_class(key), :style => "margin-top:25px;" }
               = value
 
-        .container{ :style => "padding: 0 60px;"}
+        .container
           - if current_user && select_sub_nav
             .row
               %div{ :class => "account-box box container-table"}
