--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="row">
   <h3 class="col-md-3" style="padding-top:0;margin-top:0;">
     <img class="img-rounded" style="margin-bottom:10px;" src="<%= @member.gravatar_url(:size =>40, :rating => 'G', :secure => true, :default => 'identicon') -%>"/>
@@ -50,9 +49,9 @@
       <th class="ref-no">Ref No.</th>
       <th class="status">Status</th>
       <th class="issue-date">Issue Date</th>
-      <th class="details">Details</th>
+      <th class="details" style="width:33%;">Details</th> <!-- Styles are temporary until Matt can update the custom-bootstrap.css -->
       <th class="balance-due">Balance Due</th>
-      <th class="view-invoice">&nbsp;</th>
+      <th class="view-invoice" style="width:15%;">&nbsp;</th> <!-- Ditto -->
     </tr>
   </thead>
 
@@ -77,37 +76,52 @@
           <% if item.status == "open" -%>
             <!-- Split button -->
             <div class="btn-group">
-              <%= link_to "Send", deliver_space_member_invoice_path(@space, @member, item), class: "btn btn-xs btn-default",  method: "post" -%> 
+              <%= link_to "View", space_member_invoice_path(@space, @member, item), class: "btn btn-xs btn-default"-%> 
               <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                 <span class="caret"></span>
                 <span class="sr-only">Toggle Dropdown</span>
               </button>
               <ul class="text-left dropdown-menu" role="menu">
                 <li>
-                  <%= link_to "Close and Send", deliver_space_member_invoice_path(@space, @member, item), method: "post" -%> 
+                  <%= link_to "View", space_member_invoice_path(@space, @member, item) -%> 
+                </li>
+                <li>
+                  <%= link_to "Send", deliver_space_member_invoice_path(@space, @member, item), method: "post" -%> 
                 </li>
                 <li>
                   <%= link_to "Edit", edit_space_member_invoice_path(@space, @member, item)-%>  
+                </li>
+                <li class="divider"/>
+                <li>
+                  <%= link_to "Enter Payment", new_space_member_payment_path(@space, @member, invoice_id: item.id), class: "" -%>
+                </li>
+                <li>
+                  <%= link_to "Add Credit Note", new_space_member_credit_note_path(@space, @member, invoice_id: item.id), class: ""  -%>
+                </li>
+                <li class="divider"/>
+                <li>
+                  <%= link_to "Delete", space_member_invoice_path(@space, @member, item), method: "delete", data: { confirm: 'Are you sure?' }-%>  
                 </li>
               </ul>
             </div>
           <% else -%>
             <% if !item.paid? -%>
               <div class="btn-group">
-                <%= link_to "Payment", new_space_member_payment_path(@space, @member, invoice_id: item.id), class: "btn btn-xs btn-default" -%> 
+                <%= link_to "View", space_member_invoice_path(@space, @member, item), class: "btn btn-xs btn-default" -%> 
                 <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                   <span class="caret"></span>
                   <span class="sr-only">Toggle Dropdown</span>
                 </button>
                 <ul class="text-left dropdown-menu" role="menu">
                   <li>
+                    <%= link_to "View", space_member_invoice_path(@space, @member, item) -%> 
+                  </li>
+                  <li class="divider"/>
+                  <li>
                     <%= link_to "Enter Payment", new_space_member_payment_path(@space, @member, invoice_id: item.id), class: "" -%>
                   </li>
                   <li>
                     <%= link_to "Add Credit Note", new_space_member_credit_note_path(@space, @member, invoice_id: item.id), class: ""  -%>
-                  </li>
-                  <li>
-                    <%= link_to "View", space_member_invoice_path(@space, @member, item), class: "" -%> 
                   </li>
                 </ul>
               </div>              
