Added box styling to new member form

--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -1,21 +1,22 @@
 .col-md-6.col-md-offset-3
-  = form_for([@space, @member]) do |f| 
-    .form-group{:class => has_error(@member, :name)}
-      = f.label :name 
-      = f.text_field :name, class: "form-control"
-      = field_errors(@member, :name)
-    .form-group{:class => has_error(@member, :email)}
-      = f.label :email
-      = f.text_field :email, class: "form-control"
-      = field_errors(@member, :email)
-    .form-group{:class => has_error(@member, :location)}
-      = f.label :location 
-      = f.collection_select :location_id, @space.locations, :id, :name, {allow_blank: false }, {class: "form-control"}
-      = field_errors(@member, :location)
-    .form-group{:class => has_error(@member, :plan)}
-      = f.label :plan
-      = f.collection_select :plan_id, @space.plans, :id, :name, {include_blank: true}, {class: "form-control"}
-      = field_errors(@member, :plan)
-    = f.submit class: "btn btn-primary"
-    or
-    = link_to("Cancel", :back)
+  .box.box-body
+    = form_for([@space, @member]) do |f| 
+      .form-group{:class => has_error(@member, :name)}
+        = f.label :name 
+        = f.text_field :name, class: "form-control"
+        = field_errors(@member, :name)
+      .form-group{:class => has_error(@member, :email)}
+        = f.label :email
+        = f.text_field :email, class: "form-control"
+        = field_errors(@member, :email)
+      .form-group{:class => has_error(@member, :location)}
+        = f.label :location 
+        = f.collection_select :location_id, @space.locations, :id, :name, {allow_blank: false }, {class: "form-control"}
+        = field_errors(@member, :location)
+      .form-group{:class => has_error(@member, :plan)}
+        = f.label :plan
+        = f.collection_select :plan_id, @space.plans, :id, :name, {include_blank: true}, {class: "form-control"}
+        = field_errors(@member, :plan)
+      = f.submit class: "btn btn-primary"
+      or
+      = link_to("Cancel", :back)
