--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -13,10 +13,10 @@
         = f.label :location 
         = f.collection_select :location_id, @space.locations, :id, :name, {allow_blank: false }, {class: "form-control"}
         = field_errors(@member, :location)
-      .form-group{:class => has_error(@member, :plan)}
+      .form-group{:class => has_error(@member, :plan), :style => "margin-bottom:40px;"}
         = f.label :plan
         = f.collection_select :plan_id, @space.plans, :id, :name, {include_blank: true}, {class: "form-control"}
         = field_errors(@member, :plan)
-      = f.submit class: "btn btn-primary"
+      = f.submit class: "btn btn-success"
       or
       = link_to("Cancel", :back)
