--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row" style="margin-bottom:25px;">
   <div class="col-md-12">
-    <%= link_to "Add New Member", new_space_member_path(@space), class: "btn btn-primary pull-right", style: "margin-top: 14px;" -%>
+    <%= link_to "Add New Member", new_space_member_path(@space), class: "btn btn-success pull-right", style: "margin-top: 14px;" -%>
     <h3 class="">Here's everyone at <%= @space.name-%></h3>
   </div>
 </div>
