--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -41,7 +41,7 @@
     <h3 class="col-md-6" style="padding-top:0;margin-top:0;">Invoice History</h3>
     
     <div class="col-md-6">
-      <%= link_to "New Invoice", new_space_member_invoice_path(@space, @member), class: "btn btn-primary pull-right" -%>
+      <%= link_to "New Invoice", new_space_member_invoice_path(@space, @member), class: "btn btn-success pull-right" -%>
     </div>
   </div>
 
@@ -86,22 +86,12 @@
                 </button>
                 <ul class="text-left dropdown-menu" role="menu">
                   <li>
-                    <%= link_to "View", space_member_invoice_path(@space, @member, item) -%> 
-                  </li>
-                  <li>
                     <%= link_to "Send", deliver_space_member_invoice_path(@space, @member, item), method: "post" -%> 
                   </li>
+                  <li class="divider"/>
                   <li>
                     <%= link_to "Edit", edit_space_member_invoice_path(@space, @member, item)-%>  
                   </li>
-                  <li class="divider"/>
-                  <li>
-                    <%= link_to "Enter Payment", new_space_member_payment_path(@space, @member, invoice_id: item.id), class: "" -%>
-                  </li>
-                  <li>
-                    <%= link_to "Add Credit Note", new_space_member_credit_note_path(@space, @member, invoice_id: item.id), class: ""  -%>
-                  </li>
-                  <li class="divider"/>
                   <li>
                     <%= link_to "Delete", space_member_invoice_path(@space, @member, item), method: "delete", data: { confirm: 'Are you sure?' }-%>  
                   </li>
@@ -117,11 +107,7 @@
                   </button>
                   <ul class="text-left dropdown-menu" role="menu">
                     <li>
-                      <%= link_to "View", space_member_invoice_path(@space, @member, item) -%> 
-                    </li>
-                    <li class="divider"/>
-                    <li>
-                      <%= link_to "Enter Payment", new_space_member_payment_path(@space, @member, invoice_id: item.id), class: "" -%>
+                      <%= link_to "Record Payment", new_space_member_payment_path(@space, @member, invoice_id: item.id), class: "" -%>
                     </li>
                     <li>
                       <%= link_to "Add Credit Note", new_space_member_credit_note_path(@space, @member, invoice_id: item.id), class: ""  -%>
