--- a/app/views/member_portal/_signin.html.haml
+++ b/app/views/member_portal/_signin.html.haml
@@ -1,12 +1,29 @@
-%div{style: "padding:25px;"}
-  .col-md-6.col-md-offset-3
-    %h4 Please sign in to manage your account
-    %br
-    = form_tag "/auth/identity/callback" do
-      .form-group
-        = label_tag :auth_key, "Email"
-        = text_field_tag :auth_key, nil, class: "form-control"
-      .form-group
-        = label_tag :password
-        = password_field_tag :password, nil, class: "form-control"
-      = submit_tag "Sign in", class: "btn btn-primary"
+
+/ BEGIN FULL PAGE CONTAINER
+.login-page-container
+  / BEGIN LOGIN WINDOW
+  .login-container.box
+    .container-fluid
+      .row-fluid
+        .col-md-12.text-center
+          %h3{:style => "padding: 20px 0 0; margin-bottom: 0;"}
+            = @space.name
+      .row-fluid
+        .col-md-12.greeting{:style => "color:#3E3F3A"}
+          Hi There. Please Login.
+      .row-fluid
+        = form_tag "/auth/identity/callback" do
+          .form-group
+            .col-md-12
+              = text_field_tag :auth_key, nil, autofocus: true, class: "form-control", placeholder: "Email address"
+          .form-group
+            .col-md-12
+              = password_field_tag :password, nil, class: "form-control", placeholder: "Password"
+          .row-fluid.text-center
+            .col-md-12
+              %button.btn.btn-success.btn-block.btn-login#submit_form{type: "submit"}
+                Log In
+          .row-fluid.text-center
+            .col-md-12
+              = link_to "Forgot Your Password?", "#", class: "forgot-password-member"
+    / /END LOGIN WINDOW
