--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,9 +1,9 @@
 / BEGIN LOGIN WINDOW
-.login-container
+.login-container.box
   .container-fluid
     .row-fluid
       .col-md-12.text-center
-        %img{:height => "60px", :src => "../img/logo-w.png"}/
+        %img{:height => "60px", :src => "/img/logo-d.png"}/
     .row-fluid
       .col-md-12.greeting
         Create Your Account.
